--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -270,10 +270,6 @@
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.aside-event__item {
-  color: #000;
-}
-
 .aside-event__date {
   color: #fff;
   padding: 0 0 10px 0;
@@ -287,12 +283,30 @@
   color: #fff;
 }
 
+.aside-event__item:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
 .aside-event__item-wrapper {
   margin-top: 20px;
 }
 
+.aside-event__item-wrapper:hover {
+  opacity: 0.8;
+}
+
 .expert-opinion {
   margin-top: 20px;
+}
+
+.expert-opinion__item {
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.expert-opinion__item:hover {
+  opacity: 0.8;
 }
 
 .expert-opinion__box {
