developing signup TODO php yii migrate 2

--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -1077,6 +1077,10 @@
   border-radius: 10px;
 }
 
+.help-block {
+  color: red;
+}
+
 @media only screen and (max-width: 992px) {
   .grid-item {
     width: 50%;
