--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -757,6 +757,53 @@
   margin-right: 5px;
 }
 
+/* manuals */
+.manual__link {
+  color: #0a0a0a;
+}
+.manual__link:hover {
+  color: #0a0a0a;
+  text-decoration: unset;
+}
+.manual__box {
+  text-align: center;
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+  border-radius: 10px;
+  transition: all 0.5s ease;
+  cursor: pointer;;
+}
+.manual__box:hover {
+  opacity: 0.6;
+}
+.manual__content {
+  padding: 15px 20px;
+}
+.manual__icon-wrapper {
+  padding: 15px;
+}
+.manual__info {
+  margin-top: 10px;
+  color: #9a9a9a;
+}
+.manual__pagination {
+  margin-top: 40px;
+}
+.manual__image {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.manual__description {
+  color: #9a9a9a;
+  font-size: 14px;
+}
+.manual__email {
+  margin-top: 10px;
+  font-size: 14px;
+}
+.manual__envelope-icon {
+  margin-right: 5px;
+}
+
 
 /* video-broadcasts */
 .video-broadcast__item {
