--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -804,6 +804,16 @@
   margin-right: 5px;
 }
 
+/* Map  */
+.map__marker-block {
+    border: 1px solid #dce0df;
+    background: #f5f5f5;
+    padding: 20px 30px;
+    margin: 15px 0;
+    color: #5b5b5b;
+    font-size: 13px;
+}
+
 
 /* video-broadcasts */
 .video-broadcast__item {
