--- a/frontend/web/css/best-carousel-slide.css
+++ b/frontend/web/css/best-carousel-slide.css
@@ -9,15 +9,15 @@ div.jumbotron.carousel-hero {
 }
 
 div.jumbotron.hero-nature {
-  background-image: url('../../img/architect-at-the-construction.jpg');
+  background-image: url('/img/architect-at-the-construction.jpg');
 }
 
 div.jumbotron.hero-photography {
-  background-image: url('../../img/architects-and-worker.jpg');
+  background-image: url('/img/architects-and-worker.jpg');
 }
 
 div.jumbotron.hero-technology {
-  background-image: url('../../img/young-college-students.jpg');
+  background-image: url('/img/young-college-students.jpg');
 }
 
 h1.hero-title, h2.hero-title, h3.hero-title {
