--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -104,7 +104,7 @@
   /*opacity: 0.8;*/
   width: 100%;
   height: 100%;
-  background: #009cbf url(../../img//combined-shape.svg) no-repeat right top;
+  background: #009cbf url(/img//combined-shape.svg) no-repeat right top;
   /*height: 500px;*/
   padding: 60px 60px 40px;
 }
@@ -176,7 +176,7 @@
 }
 
 .team-about__block {
-  background: linear-gradient(0deg,rgba(51,181,229,0.8),rgba(51,181,229,0.89)), url('../../img/ornament.png');
+  background: linear-gradient(0deg,rgba(51,181,229,0.8),rgba(51,181,229,0.89)), url('/img/ornament.png');
   background-repeat: round;
   color: #fff;
 }
@@ -406,7 +406,7 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../img/expert-opinion.jpg);
+  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(/img/expert-opinion.jpg);
   color: #fff;
 }
 
@@ -535,7 +535,7 @@
   color: #fff;
 }
 .breadcrumb__wrapper {
-  background: linear-gradient(0deg,rgba(51,181,229,0.8),rgba(51,181,229,0.89)), url(../../img/ornament-hero.png);
+  background: linear-gradient(0deg,rgba(51,181,229,0.8),rgba(51,181,229,0.89)), url(/img/ornament-hero.png);
   background-repeat: round;
   color: #fff;
 }
