--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -1186,6 +1186,10 @@
   color: red;
 }
 
+.event__comment {
+  margin-top: 40px;
+}
+
 @media only screen and (max-width: 992px) {
   .grid-item {
     width: 50%;
