color theme changed

--- a/frontend/web/css/best-carousel-slide.css
+++ b/frontend/web/css/best-carousel-slide.css
@@ -47,8 +47,8 @@ p.hero-subtitle {
 }
 
 .btn.btn-primary {
-  background-color: #009cbf!important;
-  border-color: #009cbf!important;
+  background-color: #009e8a!important;
+  border-color: #009e8a!important;
 }
 
 .btn-primary.focus, .btn-primary:focus {
