--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -86,7 +86,7 @@
 }
 
 .col.header-column {
-  background-color: #33b5e5;
+  background-color: #009e8a;
 }
 
 .header__search-icon {
@@ -104,7 +104,7 @@
   /*opacity: 0.8;*/
   width: 100%;
   height: 100%;
-  background: #009cbf url(/img//combined-shape.svg) no-repeat right top;
+  background: #009e8a url(/img//combined-shape.svg) no-repeat right top;
   /*height: 500px;*/
   padding: 60px 60px 40px;
 }
@@ -167,7 +167,7 @@
 
 .rounded-circle.team__item-img {
   max-width: 136px;
-  border: 8px solid rgb(0,156,191);
+  border: 8px solid rgb(1, 90, 79);
 }
 
 .team__item {
@@ -176,7 +176,7 @@
 }
 
 .team-about__block {
-  background: linear-gradient(0deg,rgba(51,181,229,0.8),rgba(51,181,229,0.89)), url('/img/ornament.png');
+  background: linear-gradient(0deg,rgba(0, 158, 138, 0.8),rgba(0, 158, 138, 0.9)), url(/img/ornament.png);
   background-repeat: round;
   color: #fff;
 }
@@ -216,11 +216,11 @@
 }
 
 .page-item.active .page-link {
-  background-color: #33b5e5;
-  border-color: #33b5e5;
+  background-color: #009e8a;
+  border-color: #009e8a;
 }
 .page-link {
-  color: #33b5e5;
+  color: #009e8a;
 }
 .col-md-8 h2 {
   margin-bottom: 20px;
@@ -280,7 +280,7 @@
 
 .photo-author {
   font-size: 14px;
-  color: #009cbf;
+  color: #dadada;
 }
 
 /* News */
@@ -356,7 +356,7 @@
 
 .aside-event__item-box {
   padding: 20px;
-  background-color: #009cbf;
+  background-color: #009e8a;
   border-radius: 10px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
@@ -535,7 +535,7 @@
   color: #fff;
 }
 .breadcrumb__wrapper {
-  background: linear-gradient(0deg,rgba(51,181,229,0.8),rgba(51,181,229,0.89)), url(/img/ornament-hero.png);
+  background: linear-gradient(0deg,rgba(0, 158, 138, 0.8),rgba(0, 158, 138, 0.9)), url(/img/ornament-hero.png);
   background-repeat: round;
   color: #fff;
 }
@@ -587,14 +587,14 @@
 }
 .blue-link-button {
   background-color: transparent;
-  border: #2295ac solid 2px;
-  color: #2295ac;
+  border: #009e8a solid 2px;
+  color: #009e8a;
   padding: 15px 35px;
   font-weight: bold;
   border-radius: 35px;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 16px;
   transition: all 0.5s ease;
 }
 .statute__download {
