--- a/frontend/web/css/best-carousel-slide.css
+++ b/frontend/web/css/best-carousel-slide.css
@@ -9,15 +9,15 @@ div.jumbotron.carousel-hero {
 }
 
 div.jumbotron.hero-nature {
-  background-image: url('/img/architect-at-the-construction.jpg');
+  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(/img/slide1.jpeg);
 }
 
 div.jumbotron.hero-photography {
-  background-image: url('/img/architects-and-worker.jpg');
+  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(/img/slide2.jpeg);
 }
 
 div.jumbotron.hero-technology {
-  background-image: url('/img/young-college-students.jpg');
+  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(/img/slide3.jpeg);
 }
 
 h1.hero-title, h2.hero-title, h3.hero-title {
