--- a/frontend/web/css/best-carousel-slide.css
+++ b/frontend/web/css/best-carousel-slide.css
@@ -10,14 +10,23 @@ div.jumbotron.carousel-hero {
 
 div.jumbotron.hero-nature {
   background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(/img/slide1.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 div.jumbotron.hero-photography {
   background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(/img/slide2.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 div.jumbotron.hero-technology {
   background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(/img/slide3.jpeg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 h1.hero-title, h2.hero-title, h3.hero-title {
