--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -1288,3 +1288,33 @@
   margin-left: 75px;
   font-size: 30px;
 }
+
+.app-button {
+  margin-top: 16px;
+  border-radius: 35px;
+  font-size: 14px;
+  color: #fff;
+  font-weight: bold;
+  background-color: transparent;
+  border: 2px solid #fff;
+  padding: 15px 35px;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: all 0.5s ease;
+}
+
+.app-button:hover {
+  background-color: #fff;
+  color: #000;
+  text-decoration: initial;
+}
+
+.locations {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background: linear-gradient(0deg,rgba(0, 158, 138, 0.8),rgba(0, 158, 138, 0.9)), url(/img/map.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  color: #fff;
+}
